[gd_scene load_steps=18 format=3 uid="uid://cvel6dmvjs1pc"]

[ext_resource type="Script" path="res://Scripts/projectile.gd" id="1_s5ixq"]
[ext_resource type="Texture2D" uid="uid://bylv133i1xyig" path="res://assets/art/sprites/player_shell_01.png" id="2_xbqbe"]
[ext_resource type="Texture2D" uid="uid://cdku1pe0s16re" path="res://assets/art/effects/Free Smoke Fx  Pixel 06.png" id="3_iog2e"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ec1xc"]
radius = 8.75
height = 37.5

[sub_resource type="AtlasTexture" id="AtlasTexture_bt5t4"]
atlas = ExtResource("3_iog2e")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpfh4"]
atlas = ExtResource("3_iog2e")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibjet"]
atlas = ExtResource("3_iog2e")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_76bu2"]
atlas = ExtResource("3_iog2e")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqskl"]
atlas = ExtResource("3_iog2e")
region = Rect2(256, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7qsk"]
atlas = ExtResource("3_iog2e")
region = Rect2(320, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2n8p"]
atlas = ExtResource("3_iog2e")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5ptr"]
atlas = ExtResource("3_iog2e")
region = Rect2(448, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_31kea"]
atlas = ExtResource("3_iog2e")
region = Rect2(512, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7dfc"]
atlas = ExtResource("3_iog2e")
region = Rect2(576, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g67aa"]
atlas = ExtResource("3_iog2e")
region = Rect2(640, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1imw"]
atlas = ExtResource("3_iog2e")
region = Rect2(704, 512, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_hsfwo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt5t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpfh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibjet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76bu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqskl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7qsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2n8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5ptr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31kea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7dfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g67aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1imw")
}],
"loop": false,
"name": &"default",
"speed": 60.0
}]

[node name="Projectile" type="Node2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_s5ixq")

[node name="Area2D" type="Area2D" parent="." groups=["Projectiles"]]
position = Vector2(0, -32.5)
scale = Vector2(0.8, 0.8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
z_index = 5
shape = SubResource("CapsuleShape2D_ec1xc")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(1.19209e-07, 1.19209e-06)
texture = ExtResource("2_xbqbe")

[node name="hitAnimation" type="AnimatedSprite2D" parent="Area2D"]
visible = false
sprite_frames = SubResource("SpriteFrames_hsfwo")
frame_progress = 1.0

[node name="explosionAnimation" type="AnimatedSprite2D" parent="Area2D"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_hsfwo")
frame = 11
frame_progress = 1.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="animation_finished" from="Area2D/hitAnimation" to="." method="_on_hit_animation_animation_finished"]
[connection signal="animation_finished" from="Area2D/explosionAnimation" to="." method="_on_hit_animation_animation_finished"]
